--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "encriptacion",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,8 @@
     "body-parser": "^1.19.0",
     "crypto-js": "^4.0.0",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "jasmine": "^3.6.3"
   }
 }
